# hk-ToolApp

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  GetToolDAQ.sh  GetToolFramework.sh  Makefile  Setup.sh  dependencies.cmake  ghost  hk-ToolAppConfig.cmake.in  hkinstall.py
.github/workflows/: Doxygen.yml  c-cpp.yml  clang-format.yml  push_workflow.yml
UserTools/: CMakeLists.txt  HKG4DetectorConstruction  HKG4EventAction  HKG4PhysicsListFactory  HKG4PrimaryGeneratorAction  HKG4RunAction  HKG4StackingAction  HKG4SteppingAction  HKG4TrackingAction  ToolSelect.sh  Unity.h  WCSim_exe
UserTools/DummyTool/: DummyTool.cpp  DummyTool.h
UserTools/Factory/: CMakeLists.txt  Factory.cpp
UserTools/InactiveTools/: PythonScript  SubToolChain  ThreadedSubToolChain
UserTools/template/: MyTool.cpp  MyTool.h  MyToolDynamicMultiThread.cpp  MyToolDynamicMultiThread.h  MyToolMultiThread.cpp  MyToolMultiThread.h  MyToolThread.cpp  MyToolThread.h
app/: CMakeLists.txt
configfiles/Dummy/: G4PhysicsList  GhostG4PrimaryGeneratorAction  ToolChainConfig  ToolsConfig  WCSim_exe
configfiles/ghost/: HKG4StackingActionConfig  HKG4TrackingActionConfig  ToolChainConfig  ToolsConfig  WCSimExeConfig
configfiles/template/: ToolChainConfig
docs/: README.md
src/: CMakeLists.txt  main.cpp
src/Factory/: CMakeLists.txt  Factory.cpp  Unity.h
src/app/: main.cpp
